--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,9 @@ body {
    
 }
 
-.suitButtom {
+.suitBottom {
     font-size: 100px;
-    margin-top: 80px;
-    padding-left: 200px;
+    margin-top: 100px;
+    padding-right: 200px;
+    transform:  rotate(180deg);
 }
